/*
 * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
 * agreements. See the NOTICE file distributed with this work for additional information regarding
 * copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance with the License. You may obtain a
 * copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 */
syntax = "proto3";

package protos;

option java_outer_classname = "TimeSeriesTFExampleKeys";
option java_multiple_files = false;
option java_package = "com.google.dataflow.sample.timeseriesflow";

enum ExampleMetadata {
    METADATA_SPAN_START_TS = 0;
    METADATA_SPAN_END_TS = 1;
    METADATA_MAJOR_KEY = 3;
    METADATA_MINOR_KEY = 4;
}

enum ExampleTypes{
    BYTE = 0;
    INT64 = 1;
    FLOAT = 2;
}